# CellCreate

./: .gitignore  .gitmodules  CC.sln  CC.slnx  CMakeLists.txt  README.md  cc.code-workspace  vcpkg.json
Game/: App.cs  AppMem.cs  Entry.cs  Game.csproj  GenerateBinding.rsp  global.using.cs
Game/Contents/: Assets.cs
Game/Core/: IModule.cs  Isolate.cs  TestModule.cs  Transform.cs
Game/Native/: Attrs.cs  Bool.cs  Ex.cs  ExchangeUtils.cs  FError.cs  FFI.cs  GraphicsPipelineState.cs  IObject.cs  NativeChunkList.cs  NativeChunkVec.cs  NativeException.cs  NativeString16.cs  Slice.cs  Str.cs
Game/Properties/: launchSettings.json
Game/Rendering/: ColorMask.cs  CommandBuffer.cs  GpuBuffer.cs  GpuResourceState.cs  GraphicSurface.cs  IGpuResource.cs  PipelineState.cs  RenderGraph.cs  RenderingContext.cs  RenderingManager.cs  ShaderMetaModel.cs  ShaderStages.cs  Shaders.cs  ViewPort.cs
Game/Utilities/: ArrPool.cs  ObjectPool.cs  TaskUtils.cs  Utils.cs
Game/Windowing/: MessageLoop.cs  Window.cs  WindowHandle.cs  WindowManager.cs
content/shaders/: bindless.hlsl  common.hlsl
content/shaders/ui/: ui.hlsl
native/: App.cc  App.h  Object.h  RenderGraph.h  defines.h  dotnet.cc  dotnet.h  main.cpp  types.h
native/ffi/: App.h  Collections.h  FFI.h  Rendering.h  Shader.h  TextureFormat.h  Window.h
native/rendering/: CmdEncoder.cc  CmdEncoder.h  GpuResource.cc  GpuResource.h  RenderGraph.cc  RenderGraph.h  Rendering.cc  Rendering.h  gpu_convert.cc  gpu_convert.h
native/utils/: ChunkVec.cc  ChunkVec.h  CoMapSet.h  HashCode.cc  HashCode.h  RwLock.h  String.cc  String.h  bitcount.h  console_utils.cc  error.h  hash_eq.h  rent.h
native/window/: Window.cc  Window.h
scripts/: ShaderMeta.ts  build-dotnet.ts  build-shader.ts
